--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 indicatif = "0.17.11"
+rand = "0.9.1"
+rng = "0.1.0"
 
 [lib]
 name = "raytracing_in_a_weekend_rust"
